--- a/dokumentti/template-fi.tex
+++ b/dokumentti/template-fi.tex
@@ -337,10 +337,14 @@ Toiminnallinen kuvaus ilmaisee mitä toimintoja palvelu tarjoaa ja minkä ehtoje
 Alla olevassa esimerkissä on määritetty, että prosessilla on syöte ''lähtökenttä'' (\textit{departureAirport}), tuloste ''lentoja löytynyt'' (\textit{FlightsFound}) ja 
 tilamuutos ''istumapaikka löytynyt'' (\textit{HaveSeatResult})\cite{daml}:
 
+\footnotesize
 \begin{verbatim}
- <profile:hasInput rdf:resource="http://www.daml.org/services/owl-s/1.2/BravoAirProcess.owl#DepartureAirport"/
- <profile:hasOutput rdf:resource="http://www.daml.org/services/owl-s/1.2/BravoAirProcess.owl#FlightsFound"/>
- <profile:hasResult rdf:resource="http://www.daml.org/services/owl-s/1.2/BravoAirProcess.owl#HaveSeatResult"/
+ <profile:hasInput rdf:resource=
+     "http://www.daml.org/services/owl-s/1.2/BravoAirProcess.owl#DepartureAirport"/>
+ <profile:hasOutput rdf:resource=
+     "http://www.daml.org/services/owl-s/1.2/BravoAirProcess.owl#FlightsFound"/>
+ <profile:hasResult rdf:resource=
+     "http://www.daml.org/services/owl-s/1.2/BravoAirProcess.owl#HaveSeatResult"/>
 \end{verbatim}
 
 Edellisessä esimerkissä on poimittu ainoastaan muutamia toiminnallisia määrityksiä, todelliset määritykset voi katsoa alkuperäisestä lähteestä\cite{daml}. 
@@ -386,7 +390,7 @@ Syötteet ja paluuarvot ilmaistaan \texttt{hasInput}- ja \texttt{hasOutput} - om
 
 BravoAirin prosessikuvauksessa on atominen prosessi \texttt{SelectAvailableFlight}, joka kuvaa prosessin, jossa asiakas valitsee haluamansa lennon saatavilla olevista vaihtoehdoista \cite{daml}. Sillä on on yksi syöte, lista tarjolla olevista lennoista (\textit{SelectAvailableFlight\_FlightsAvailable}), sekä yksi paluuarvo, valittu lento (\textit{SelectAvailableFlight\_SelectedFlight}). Syöte määritellään \textit{hasInput}-tägien sisällä ja vastaavasti paluuarvo \textit{hasOutput} -tägien sisässä\cite{daml}:
 
-\
+\footnotesize
 \begin{verbatim}
 <process:AtomicProcess rdf:ID="SelectAvailableFlight">
     <rdfs:label>SelectAvailableFlight (ATOMIC)</rdfs:label>
@@ -432,6 +436,7 @@ Kun tulos (\texttt{Result}) on esitelty, prosessimalli voi kuvailla sitä neljä
 
 Seuraavassa esimerkissä esitetään tuloksen muodostuminen \cite{daml}. Esimerkki liitty prosessiin, jossa varataan lento. \texttt{hasResult} kuvaa tuloksen muodostuksen, jossa onnistuneen ostotapahtuman jälkeen palautetaan paluuarvona lentosuunnitelma (\texttt{\#BookFlight\_PreferredFlightItinerary"}) sekä varaustunnus (\texttt{\#BookFlight\_ReservationID}). 
 
+\footnotesize
 \begin{verbatim}
 <process:hasResult>
     <process:Result>
@@ -468,10 +473,12 @@ Seuraavassa esimerkissä esitetään tuloksen muodostuminen \cite{daml}. Esimerk
 </process:hasResult>
 \end{verbatim}
 
+\normalsize
+
 
 Esimerkissä ilmaistaan ominaisuudella \texttt{inCondition} ehto, jolla kyseinen tulos muodostetaan. Tässä tapauksessa ehto on aina tosi, mikä tarkoittaa, että kyseisen prosessin suorituksessa tämä tulos muodostetaan aina. \texttt{withOutput}-ominaisuuksilla kuvataan kuinka paluuarvot sidotaan muuttujiin. Tämä tuo mukaan OWL-S:n datavuoaspektin. 
 
-OWL-S:ssä datavuo toimii periaatteella ''kuluttaja pyytää'', eli mikään prosessi (tuottaja) ei työnnä dataa toiselle prosessille (kuluttaja) vaan kuluttajaprosessi pyytää sitä kuten esimerkkitapauksessamme \texttt{OutputBinding} -oliossa. Esimerkissä ylemmän \texttt{OutputBinding}in \texttt{toParam} -ominaisuuden arvo kertoo, että sidomme palautettavan arvon paluuarvomuuttujaan \textit{\#BookFlight\_PreferredFlightItinerary}. Muuttujan saama arvo määrätään tulevaksi prosessin  \texttt{\#PerformCompleteReservation} muuttujasta \texttt{\#CompleteReservation\_PreferredFlightItinerary}. 
+OWL-S:ssä datavuo toimii periaatteella ''kuluttaja pyytää'', eli mikään prosessi (tuottaja) ei työnnä dataa toiselle prosessille (kuluttaja) vaan kuluttajaprosessi pyytää sitä kuten esimerkkitapauksessamme \texttt{OutputBinding} -oliossa. Esimerkissä ylemmän \texttt{OutputBinding}in \texttt{toParam} -ominaisuuden arvo kertoo, että sidomme palautettavan arvon paluuarvomuuttujaan \texttt{\#BookFlight\_PreferredFlightItinerary}. Muuttujan saama arvo määrätään tulevaksi prosessin  \texttt{\#PerformCompleteReservation} muuttujasta \texttt{\#CompleteReservation\_PreferredFlightItinerary}. 
 
 Yksinkertaistettuna datavuo prosessilta prosessille kulkee seuraavalla tavalla: 
 
@@ -522,42 +529,41 @@ Seuraavat \texttt{WSDLAtomicProcessGrounding}in ominaisuudet mahdollistavat OWL-
 \item \texttt{wsdlOperation} viittaa wsdl-dokumentissa määriteltyyn operaatioon, joka vastaa OWL-S:n  atomista prosessia. BravoAir-esimerkissä MÄPÄTÄÄN 
 prosessikuvauksessa oleva \textit{BravoAirProcess.owl\#LogIn} -prosessi WSDL-määrityksen vastaavaan operaatioon \texttt{\#LogIn\_operation}: 
 
+\small
 \begin{verbatim}
-<grounding:owlsProcess rdf:resource="http://www.daml.org/services/owl-s/1.2/BravoAirProcess.owl#LogIn"/>
+<grounding:owlsProcess rdf:resource=
+    "http://www.daml.org/services/owl-s/1.2/BravoAirProcess.owl#LogIn"/>
 <grounding:wsdlOperation rdf:resource="#LogIn_operation"/>
 \end{verbatim}
+\normalsize
 
 WSDL:n operaatiomäärityksiä ei voi sisällyttää tähän raporttiin joten niiden rakennetta voi tutkia lähteistä \cite{daml} ja \cite{WSDL}. 
 
 \item \texttt{wsdlInputMessage} on olio, johon on talletettu sen  WSDL-määrityksen URI, joka ilmaisee syötteitä kuljettavien viestien muodon.  
 
 \item \texttt{wsdlInput} -oliossa MÄPÄTÄÄN jokainen mäpättävän prosessin syöte WSDL:ssä  määritetyn viestin osaksi. Ideaalitapauksessa jokaista syötettä vastaa yksi WSDL:n viestin osa. Alla olevassa esimerkissä. MÄPÄTÄÄN BravoAirin prosessikuvauksen syöte \texttt{\#LogIn\_AcctName} WSDL-määritykseen  \texttt{\#acctName}. Viittaus jälleen URI:n avulla. 
-%\small
+\footnotesize
 \begin{verbatim}
 <grounding:wsdlInput>
     <grounding:WsdlInputMessageMap>
-        <grounding:owlsParameter rdf:resource="http://www.daml.org/services/owl-s/1.2/BravoAirProcess.owl#LogIn\_AcctName"/>
+        <grounding:owlsParameter rdf:resource=
+            "http://www.daml.org/services/owl-s/1.2/BravoAirProcess.owl#LogIn\_AcctName"/>
         <grounding:wsdlMessagePart rdf:datatype="http://www.w3.org/2001/XMLSchema#anyURI">
             http://www.daml.org/services/owl-s/1.2/BravoAirGrounding.wsdl#acctName
         </grounding:wsdlMessagePart>
     </grounding:WsdlInputMessageMap>
 </grounding:wsdlInput>
 \end{verbatim}
-%\normalsize
+\normalsize
 
 \item \texttt{wsdlOutput} ja \texttt{wsdlOutputMessage} toimivat vastaavasti kuin edelliset, mutta MÄPPÄÄVÄT prosessin paluuarvoja.
 \end{itemize}
 
 \section{Pohdintaa}
 
-versioasiat
+W3C:n dokumentaatio koskee tällä hetkellä versiota 1.1 ja ainakin dokumentaation mukaan parannuksia on luvassa (ainakin esimerkkidokumentteja löytyy versiolle 1.2.)\cite{OWLS}. 
 
-menestynyt tutkimusmaailmassa. \cite{with_owls}
-
-\cite{with_owls}OWL-S could still be improved in a number of ways. First, there is currently no way of describing desirable security and QoS properties for Web Services; there is a dire need for both in the community, and promising work is underway. Second, the process model lacks exception handling, which would allow for a closer alignment with WSDL faults. Third, we plan to update the grounding subontology so that it works with WSDL 2.0. Fourth, further work is needed on algorithms that effectively support discovery, selection, and composition of services in large-scale, complex settings. Fifth, to encourage the community to develop OWL-S extensions, we are contemplating the prospect of adopting an open-source style of code evolution. Finally, as in other areas of the Semantic Web, we need more domain-level ontologies; there is a need to develop specializations of OWL-S profiles for a variety of domains, and for broad categories of services; in addition, for services that sell goods, ontology modules are needed for specifying cost models, negotiations, contracts, and guarantees.
-
-
-
+OWL-S on menestynyt parhaiten tiedemaailmassa\cite{with_owls}. Merkittävät arkielämän sovellukset kuitenkin puuttuvat puuttuvat vielä tällä hetkellä. OWL-S:n ongelmia on mm. toimivan poikkeuskäsittelyn puute maadoituksessa\cite{with_owls}: mitä tehdä, jos palvelun suorituksessa kohdataan ongelmia? Tulevaisuuden pyrkimyksenä on kytkeä OWL-S WSDL:n poikkeuskäsittelyyn. Palvelujen laadun ja luotettavuuden varmistaminen ei ole mahdollista OWL-S:llä\cite{with_owls}. Tämä kysymys on ollut esillä siitä lähtien kun semanttisesta webistä on alettu puhua, mutta ratkaisua ei ole vielä löytynyt\cite{semweb}. Myös tehokkaiden parinmuodostusalgoritmien puute on vaivannut automaattisen palvelujen orkestroinnin kehitystä\cite{with_owls}. Suurin ongelma ehkä on kuitenkin, samoin kuin semanttisessa webissä yleensä, soveluusaluekohtaisten ontologioiden puute\cite{with_owls}. Tässä ollaan selvästi klassisen muna vai kana -problematiikan äärellä.    
 
 % --- Back matter ---
 %
